static/css/main.css
/* spacing for header */
.header {
    margin-bottom: 30px;
}

/* center the page heading */
#currentView {
    text-align: center;
}

#currentContour {
    text-align: center;
}

#instruction-text {
    text-align: center;
}

.top-level-container {
    width: 100%;
    max-width: 100%;
}

.column-view-div {
    width: 100%;
    height: 500px;
}

#sample-image {
    width: 48%;
    height: 480px;
    margin: 0px;
    float: left;
    margin-right: 5px;
    background-size: 100%;
    background-repeat: no-repeat;
}

#video-container {
    width: 48%;
    display: inline-block;
}

/* must be id for some reason */
#videoElement {
    width: 640px;
    height: 480px;
    background-color: #666;
}

#testimg {
    cursor: crosshair;
}

.front-image {
    background-image: url(/static/images/front_full.jpg);
}

.side-image {
    background-image: url(/static/images/side_full.jpg);
}

/* no proper image */
.measure-card-width {
    background-image: url(/static/images/card_front.png);
}

/* no proper image */
.measure-card-length {
    background-image: url(/static/images/card_side.png);
}

.measure-chest-width {
    background-image: url(/static/images/chest_front.png);
}

.measure-chest-length {
    background-image: url(/static/images/chest_side.png);
}

/* no proper image */
.measure-waist-width {
    background-image: url(/static/images/waist_front.png);
}

/* no proper image */
.measure-waist-length {
    background-image: url(/static/images/waist_side.png);
}

.measure-neck-width {
    background-image: url(/static/images/neck_front.png);
}

.measure-neck-length {
    background-image: url(/static/images/neck_side.png);
}

